Ensure some bottom spacing in settings window

--- a/style.css
+++ b/style.css
@@ -50,6 +50,7 @@ html, body, #app {
 
 .settings-section {
   margin-top: 2em;
+  margin-bottom: 1em;
   margin-left: 1em;
   margin-right: 1em;
 }
